tests/ui/macros/macro-path-prelude-fail-4.rs
#[derive(inline)] //~ ERROR expected derive macro, found built-in attribute `inline`
struct S;

fn main() {}
